cmake_minimum_required(VERSION 3.7)
project(TPGUI02)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_AUTOMOC ON)
find_package(Qt5Widgets CONFIG REQUIRED)
add_executable(TPGUI02 main.cpp SQLClientWindow.cpp ButtonsPanel.cpp LabeledTextField.cpp ConfigurationDialog.cpp)
target_link_libraries(TPGUI02 Qt5::Widgets)